chore: git workflow